--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/assets/logo.22677e96.png" />
+    <link rel="icon" type="image/png" href="/GJCEIWebsite/assets/logo.22677e96.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GJCEI</title>
-  <script type="module" crossorigin src="/assets/index.7c44743f.js"></script>
-  <link rel="stylesheet" href="/assets/index.b27cdd49.css">
+  <script type="module" crossorigin src="/GJCEIWebsite/assets/index.c7e9a8b5.js"></script>
+  <link rel="stylesheet" href="/GJCEIWebsite/assets/index.1c22cbdb.css">
 </head>
-
 <body>
     <div id="root"></div>
     
